style.css
html{
    height: 100%;
    width: 100%;
    /* Hide scrollbar for IE, Edge and Firefox */
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;
}

::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
    display: none;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-family: 'Roboto', sans-serif;
    background: black;
    flex-direction: column;
}

.landing-view{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
    height: calc(var(--vh, 1vh) * 100);
    width: 100%;
    scroll-snap-align: start;
}

.detail-view{
    margin: 20px 0;
    max-width: 600px;
    padding: 0 30px;
    min-height: 100vh;/* Fallback for browsers that do not support Custom Properties */
    min-height: calc(var(--vh, 1vh) * 100 - 64px);
    scroll-snap-align: start;
}

.detail-view h2{
    text-align: center;
}

.detail-view p{
    text-align: justify;
}

.impressum-container{
    max-width: 1000px;
    height: 100%;
    margin: 20px 20px 0 20px;
}

.profile-container {
    text-align: center;
    width: 60%;
    max-width: 600px;
    min-width: 300px;
}

.social-media-row {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.social-media-row img {
    height: 3rem;
    width: 3rem;
    fill: white;
}

.social-media-row img:hover{
    border-radius: 50%;
    border: 2px solid black;
    filter: invert(100%);
    
}

h1 {
    margin: 0;
    padding: 0;
    font-size: 2.2rem;
}

.landing-view hr {
    margin: 14px 0 22px 0;
}

.image-container {
    position: relative;
    max-width: 400px;
    margin: 0 auto 10px auto;
    overflow: hidden;
}

#profile-pic {
    width: 100%;
    height: 100%;
    max-width: 400;
    border-radius: 50%;
}

.image-border {
    position: absolute;
    width: 100%;
    height: 100%;
    max-width: 400px;
    border-radius: 50%;
    border-top: 2px dashed #fffff;
    border-right: 2px dashed #ffffff;
    border-left: 2px dashed #ffffff;
    border-bottom: 2px dashed #fffff;
    padding: 0px;
    margin: 0px;
    animation: spin 6s infinite ease-in-out;   
}

@keyframes spin {
    100% {
        transform: rotate(1turn);
    }
}

.name{
    margin-bottom: 10px;
}

.information-element img {
    width: 1.8rem;
    padding: 0 5px 0 0;
}

.information-element {
    
    font-size: 1.4rem;
    padding: 0 0 0.5rem 0;
}

a {
    color: white;
    text-decoration: none;
}



footer{
    margin: 10px 0;
}


footer a{
    font-size: 15px;
    color: turquoise;
    text-decoration: underline;
}

.scroll-down-link img{
    width: 40px;
    height: 40px;
}

.scroll-down-link {
    cursor:pointer;
	margin: 0px 0 0 -20px;
	position: absolute;
	left: 50%;
	bottom: 0px;
	color: #FFF;
	z-index: 100;
	text-decoration: none;
	text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
	-webkit-animation: ca3_fade_move_down 2s ease-in-out infinite;
	-moz-animation:    ca3_fade_move_down 2s ease-in-out infinite;
	animation:         ca3_fade_move_down 2s ease-in-out infinite;
}


/*animated scroll arrow animation*/
@-webkit-keyframes ca3_fade_move_down {
  0%   { -webkit-transform:translate(0,-20px); opacity: 0;  }
  50%  { opacity: 1;  }
  100% { -webkit-transform:translate(0,0px); opacity: 0; }
}
@-moz-keyframes ca3_fade_move_down {
  0%   { -moz-transform:translate(0,-20px); opacity: 0;  }
  50%  { opacity: 1;  }
  100% { -moz-transform:translate(0,0px); opacity: 0; }
}
@keyframes ca3_fade_move_down {
  0%   { transform:translate(0,-20px); opacity: 0;  }
  50%  { opacity: 1;  }
  100% { transform:translate(0,0px); opacity: 0; }
}

